--- a/src/app/arms/arms.component.html
+++ b/src/app/arms/arms.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Accounts Reservation and Monitoring System">ARMS</abbr></h4>
     <h6>Web-based Technologies, Inc.</h6>
-    <p><small class="text-muted">1998/11-2000/07; Philippines</small></p>
+    <h6>1998/11-2000/07; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
