--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
-<a class="d-none d-sm-inline d-print-none text-muted" href="#" onclick="window.print()"><i class="fas fa-2x fa-print"></i></a>
+<a class="print-icon d-sm-inline d-print-none text-muted" href="#" onclick="window.print()"><i class="fas fa-2x fa-print"></i></a>
 <div class="jumbotron jumbotron-fluid card mt-2 pb-4">
     <h1 class="display-4 text-center">Tanny del Rosario</h1>
     <h6 class="lead text-center">Architect/ Engineer/ Designer/ Developer</h6>
@@ -10,9 +10,10 @@
         <li>Frontend Developer (HTML5, CSS3, Javascript, Angular)</li>
         <li>Backend Developer (Java EE, Spring, NodeJs)</li>
         <li>MEAN Developer (MongoDb, ExpressJs, Angular, NodeJs)</li>
-        <li class="lead mt-2 badge-light text-capitalize font-italic">20 years of experience!</li>
+        <li class="lead mt-2 badge-light text-capitalize font-italic">21 years of experience!</li>
     </ul>
     <div class="btn-group align-self-end px-4">
+        <a class="btn btn-light d-none d-print-inline-block" href="https://tanny-del-rosario-resume-v2.firebaseapp.com/" role="button"><i class="fas fa-user"></i> Online Resume</a>
         <a class="btn btn-light" href="tel:+639159448544" role="button"><i class="fas fa-mobile"></i> Mobile</a>
         <a class="btn btn-light" href="mailto:delrosariotanny@gmail.com" role="button"><i class="far fa-envelope"></i> eMail</a>
         <a class="btn btn-light" href="https://www.facebook.com/messages/t/tanny.delrosario/" target="_blank" role="button"><i class="fab fa-facebook-messenger"></i> Message</a>
