--- a/src/app/dvcmob/dvcmob.component.html
+++ b/src/app/dvcmob/dvcmob.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Disney Vacation Club Members Online Booking">DVCMOB</abbr></h4>
     <h6>RCG IT Manila</h6>
-    <p><small class="text-muted">2009/11-2010/10; Philippines, USA</small></p>
+    <h6>2009/11-2010/10; Philippines, USA</h6>
 </div>
 <div class="timeline-body">
     <dl>
