--- a/src/app/element-vehicle-management-system/element-vehicle-management-system.component.html
+++ b/src/app/element-vehicle-management-system/element-vehicle-management-system.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Element Vehicle Management System</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">07/2016-10/2016; Philippines</small></p>
+    <h6>07/2016-10/2016; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
