--- a/src/app/employee-data-management-system/employee-data-management-system.component.html
+++ b/src/app/employee-data-management-system/employee-data-management-system.component.html
@@ -6,7 +6,7 @@
         </a>
     </h4>
     <h6>Freelance</h6>
-    <p><small class="text-muted">2017/11/12-2017/11/29; Philippines</small></p>
+    <h6>2017/11/12-2017/11/29; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
