--- a/src/app/gesmp/gesmp.component.html
+++ b/src/app/gesmp/gesmp.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="GE Supplier Marketplace">GESMP</abbr></h4>
     <h6>GXS Software Development, Inc.</h6>
-    <p><small class="text-muted">2001/11-2005/03; Philippines</small></p>
+    <h6>2001/11-2005/03; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
