--- a/src/app/glaim/glaim.component.html
+++ b/src/app/glaim/glaim.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Global Logistics Americas Information Management">GLAIM</abbr></h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2011/08-2013/06; Philippines</small></p>
+    <h6>2011/08-2013/06; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
