--- a/src/app/lafarge-pilot-customer-portal/lafarge-pilot-customer-portal.component.html
+++ b/src/app/lafarge-pilot-customer-portal/lafarge-pilot-customer-portal.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Lafarge Pilot Customer Portal</h4>
     <h6>Aspire IT Solutions, Inc.</h6>
-    <p><small class="text-muted">2005/03-2005/07; Philippines</small></p>
+    <h6>2005/03-2005/07; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
