--- a/src/app/nebo/nebo.component.html
+++ b/src/app/nebo/nebo.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Test tool for the NEBO&apos;s DB and Architecture</h4>
     <h6>E*Soft People</h6>
-    <p><small class="text-muted">2000/07-2001/01; USA</small></p>
+    <h6>2000/07-2001/01; USA</h6>
 </div>
 <div class="timeline-body">
     <dl>
