--- a/src/app/oim-migration/oim-migration.component.html
+++ b/src/app/oim-migration/oim-migration.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Oracle Identity Manager">OIM</abbr> Migration</h4>
     <h6>Barclays Global Investors</h6>
-    <p><small class="text-muted">2008/01-2008/12; Singapore</small></p>
+    <h6>2008/01-2008/12; Singapore</h6>
 </div>
 <div class="timeline-body">
     <dl>
