--- a/src/app/pos/pos.component.html
+++ b/src/app/pos/pos.component.html
@@ -1,6 +1,6 @@
 <div class="timeline-heading">
     <h4><abbr title="Point of Sale">POS</abbr></h4>
-    <h6>GetWonders Corporation.</h6>
+    <h6>Confidential</h6>
     <h6>2018/05-Present; Philippines</h6>
 </div>
 <div class="timeline-body">
