--- a/src/app/projects-md/projects-md.component.html
+++ b/src/app/projects-md/projects-md.component.html
@@ -5,6 +5,21 @@
             <ol class="px-4" reversed>
                 <li class="timeline-inverted">
                     <div class="timeline-panel">
+                        <app-invoice-system></app-invoice-system>
+                    </div>
+                </li>
+                <li class="timeline-inverted">
+                    <div class="timeline-panel">
+                        <app-sesame-menu></app-sesame-menu>
+                    </div>
+                </li>
+                <li class="timeline-inverted">
+                    <div class="timeline-panel">
+                        <app-pos></app-pos>
+                    </div>
+                </li>
+                <li class="timeline-inverted">
+                    <div class="timeline-panel">
                         <app-my-resume-website-v2></app-my-resume-website-v2>
                     </div>
                 </li>
