--- a/src/app/sesame-menu/sesame-menu.component.html
+++ b/src/app/sesame-menu/sesame-menu.component.html
@@ -11,7 +11,7 @@
             <i class="fas fa-external-link-alt"></i> Open App
         </a>
     </h4>
-    <h6>GetWonders Corporation.</h6>
+    <h6>Confidential</h6>
     <h6>2018/08-Present; Philippines</h6>
 </div>
 <div class="timeline-body">
@@ -24,6 +24,10 @@
                 <li>As Designer/ Developer - responsible for the design and development of sesame.menu application and enhancement and bug fixes using Angular 7 and other technologies.</li>
             </ul>
         </dd>
+        <dt>Cloud:</dt>
+        <dd>
+            <app-pills-aws></app-pills-aws>
+        </dd>
         <dt>Client-side:</dt>
         <dd>
             <app-pills-angular></app-pills-angular>
@@ -33,7 +37,6 @@
         </dd>
         <dt>Server-side:</dt>
         <dd>
-            Amazon Web Services (AWS),
             <app-pills-spring></app-pills-spring>, Mybatis, Redis, Kafka
         </dd>
         <dt>Other Languages:</dt>
