--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -4,6 +4,7 @@
         <dl class="list-skill striped-list">
             <dt>Cloud:</dt>
             <dd>
+                <app-pills-aws></app-pills-aws>
                 <app-pills-ibm-cloud></app-pills-ibm-cloud>
                 <app-pills-firebase></app-pills-firebase>
                 <app-pills-heroku></app-pills-heroku>
@@ -22,8 +23,8 @@
             <dd>
                 <app-pills-java category="EE"></app-pills-java> (Portal/ Portlet, JSF, JSP, Servlet, REST, JPA),
                 <app-pills-spring></app-pills-spring> (Spring MVC, Spring Boot, Spring Data JPA),
-                <app-pills-php></app-pills-php>
                 <app-pills-node-js></app-pills-node-js>
+                <app-pills-php></app-pills-php>
             </dd>
             <dt>Database:</dt>
             <dd>Oracle, Sybase, Ms SQL Server/ Azure Ms SQL Server, DB2, MySQL, Google Firebase, MongoDb, and Cloudant</dd>
