--- a/src/app/abbott-labs-support/abbott-labs-support.component.html
+++ b/src/app/abbott-labs-support/abbott-labs-support.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Abbott Labs Support</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2014/06-2014/11; Philippines</small></p>
+    <h6>2014/06-2014/11; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
