--- a/src/app/dcl/dcl.component.html
+++ b/src/app/dcl/dcl.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Disney Cruise Lines">DCL</abbr></h4>
     <h6>RCG IT Manila</h6>
-    <p><small class="text-muted">2009/09-2009/11; USA</small></p>
+    <h6>2009/09-2009/11; USA</h6>
 </div>
 <div class="timeline-body">
     <dl>
