--- a/src/app/facebook/facebook.component.html
+++ b/src/app/facebook/facebook.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Facebook Page Advertisements and Administration</h4>
     <h6>Freelance</h6>
-    <p><small class="text-muted">2017/06-Present; Philippines</small></p>
+    <h6>2017/06-Present; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
