--- a/src/app/freelance-projects/freelance-projects.component.html
+++ b/src/app/freelance-projects/freelance-projects.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Freelance Projects</h4>
     <h6>Freelance</h6>
-    <p><small class="text-muted">2017/04-Present; Philippines</small></p>
+    <h6>2017/04-Present; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
