--- a/src/app/front-end-design-dev-training/front-end-design-dev-training.component.html
+++ b/src/app/front-end-design-dev-training/front-end-design-dev-training.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Front-end Design and Development Training</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2015/02-2015/09; Philippines</small></p>
+    <h6>2015/02-2015/09; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
