--- a/src/app/ibm-cloud-app-dev-training/ibm-cloud-app-dev-training.component.html
+++ b/src/app/ibm-cloud-app-dev-training/ibm-cloud-app-dev-training.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>IBM Cloud/ Bluemix Application Developer Training and Certification</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2016/10-2016/10; Philippines</small></p>
+    <h6>2016/10-2016/10; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
