--- a/src/app/icare/icare.component.html
+++ b/src/app/icare/icare.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>iCare</h4>
     <h6>International SQL Star Pt. Ltd.</h6>
-    <p><small class="text-muted">2009/01-2009/05; Singapore</small></p>
+    <h6>2009/01-2009/05; Singapore</h6>
 </div>
 <div class="timeline-body">
     <dl>
