--- a/src/app/invoice-system/invoice-system.component.html
+++ b/src/app/invoice-system/invoice-system.component.html
@@ -1,6 +1,6 @@
 <div class="timeline-heading">
     <h4>Invoice Billing System</h4>
-    <h6>GetWonders Corporation.</h6>
+    <h6>Confidential</h6>
     <h6>2019/02-Present; Philippines</h6>
 </div>
 <div class="timeline-body">
