--- a/src/app/java-bootcamp-apr-16/java-bootcamp-apr-16.component.html
+++ b/src/app/java-bootcamp-apr-16/java-bootcamp-apr-16.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Java Bootcamp Batch Apr&apos;16</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2016/03-2016/04; Philippines</small></p>
+    <h6>2016/03-2016/04; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
