--- a/src/app/java-bootcamp-sep-15/java-bootcamp-sep-15.component.html
+++ b/src/app/java-bootcamp-sep-15/java-bootcamp-sep-15.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Java Bootcamp Batch Sep&apos;15</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2015/09-2015/10; Philippines</small></p>
+    <h6>2015/09-2015/10; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
