--- a/src/app/mpaa/mpaa.component.html
+++ b/src/app/mpaa/mpaa.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Motion Picture Association of America">MPAA</abbr> Project</h4>
     <h6>RCG IT Manila</h6>
-    <p><small class="text-muted">2001/05-2001/09; Philippines</small></p>
+    <h6>2001/05-2001/09; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
