--- a/src/app/my-resume-website-v2/my-resume-website-v2.component.html
+++ b/src/app/my-resume-website-v2/my-resume-website-v2.component.html
@@ -6,7 +6,7 @@
         </a>
     </h4>
     <h6>Freelance</h6>
-    <p><small class="text-muted">2018/03/18-2018/03/26; Philippines</small></p>
+    <h6>2018/03/18-2018/03/26; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
