--- a/src/app/national-grid-support/national-grid-support.component.html
+++ b/src/app/national-grid-support/national-grid-support.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>National Grid Support</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2015/11-2016/04; Philippines</small></p>
+    <h6>2015/11-2016/04; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
