--- a/src/app/pou/pou.component.html
+++ b/src/app/pou/pou.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Point of Use">POU</abbr></h4>
     <h6>Lawson Philippine Solutions & Service Center, Inc.</h6>
-    <p><small class="text-muted">2006/03-2008/01; Philippines, USA</small></p>
+    <h6>2006/03-2008/01; Philippines, USA</h6>
 </div>
 <div class="timeline-body">
     <dl>
