--- a/src/app/project-management-portal/project-management-portal.component.html
+++ b/src/app/project-management-portal/project-management-portal.component.html
@@ -6,7 +6,7 @@
         </a>
     </h4>
     <h6>Freelance</h6>
-    <p><small class="text-muted">2018/01-Present; Philippines</small></p>
+    <h6>2018/01-Present; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
