--- a/src/app/sears-canada-support/sears-canada-support.component.html
+++ b/src/app/sears-canada-support/sears-canada-support.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Sears Canada Support</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2013/12-2014/04; Philippines</small></p>
+    <h6>2013/12-2014/04; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
