--- a/src/app/sprint-offsite-support/sprint-offsite-support.component.html
+++ b/src/app/sprint-offsite-support/sprint-offsite-support.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Sprint Offsite Support</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2014/11-2015/02; Philippines</small></p>
+    <h6>2014/11-2015/02; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
