--- a/src/app/sws/sws.component.html
+++ b/src/app/sws/sws.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Software Services">SWS</abbr> Project</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2013/07-2013/09; Philippines</small></p>
+    <h6>2013/07-2013/09; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
