--- a/src/app/up-skilling-training/up-skilling-training.component.html
+++ b/src/app/up-skilling-training/up-skilling-training.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Up-skilling Training</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2016/11-2017/04; Philippines</small></p>
+    <h6>2016/11-2017/04; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
