--- a/src/app/walgreens-ais/walgreens-ais.component.html
+++ b/src/app/walgreens-ais/walgreens-ais.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>Walgreens <abbr title="Automated Item System">AIS</abbr></h4>
     <h6>RCG IT Manila</h6>
-    <p><small class="text-muted">2010/10-2011/01; Philippines</small></p>
+    <h6>2010/10-2011/01; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
