--- a/src/app/web-dm/web-dm.component.html
+++ b/src/app/web-dm/web-dm.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4><abbr title="Web Design Manuals">WebDM</abbr></h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
-    <p><small class="text-muted">2013/09-2013/12; Philippines</small></p>
+    <h6>2013/09-2013/12; Philippines</h6>
 </div>
 <div class="timeline-body">
     <dl>
